--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,3 +1,24 @@
+# == Schema Information
+#
+# Table name: users
+#
+#  id                              :integer          not null, primary key
+#  email                           :string           not null
+#  crypted_password                :string
+#  salt                            :string
+#  created_at                      :datetime         not null
+#  updated_at                      :datetime         not null
+#  remember_me_token               :string
+#  remember_me_token_expires_at    :datetime
+#  reset_password_token            :string
+#  reset_password_token_expires_at :datetime
+#  reset_password_email_sent_at    :datetime
+#  activation_state                :string
+#  activation_token                :string
+#  activation_token_expires_at     :datetime
+#  is_admin                        :boolean          default("f")
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined. If you add columns to the
