--- a/config/application.yml
+++ b/config/application.yml
@@ -9,11 +9,11 @@
 # production:
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
-# production:
-#    SMS_API_KEY: 'key-03c92edd495ea53462eeeac792dfe901'
-#
-#
-#
-#
-#  development:
-#    SMS_API_KEY: 'key-03c92edd495ea53462eeeac792dfe901
+production:
+  SMS_API_KEY: "key-03c92edd495ea53462eeeac792dfe901"
+
+
+
+
+development:
+  SMS_API_KEY: "key-03c92edd495ea53462eeeac792dfe901"
