--- a/config/application.yml
+++ b/config/application.yml
@@ -11,9 +11,15 @@
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
 production:
   SMS_API_KEY: "key-03c92edd495ea53462eeeac792dfe901"
-
-
+  qiniu_access_key: "WNH3DY4esfsYs9-YIekFuWJGoRhc49tz0kdzEw8Z"
+  qiniu_secret_key: "4vomaFW8KjR8jTvUMNXtw8EF_5ck8_iJS9zR3PWf"
+  qiniu_bucket: "knewmark"
+  qiniu_bucket_domain: "or994at4y.bkt.clouddn.com"
 
 
 development:
   SMS_API_KEY: "key-03c92edd495ea53462eeeac792dfe901"
+  qiniu_access_key: "WNH3DY4esfsYs9-YIekFuWJGoRhc49tz0kdzEw8Z"
+  qiniu_secret_key: "4vomaFW8KjR8jTvUMNXtw8EF_5ck8_iJS9zR3PWf"
+  qiniu_bucket: "knewmark"
+  qiniu_bucket_domain: "or994at4y.bkt.clouddn.com"
