--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -10,10 +10,16 @@
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
 production:
-   SMS_API_KEY: key-03c92edd495ea53462eeeac792dfe901
+  SMS_API_KEY: ""
+  qiniu_access_key: ""
+  qiniu_secret_key: ""
+  qiniu_bucket: ""
+  qiniu_bucket_domain: ""
 
 
-
-
- development:
-   SMS_API_KEY: key-03c92edd495ea53462eeeac792dfe901 
+development:
+  SMS_API_KEY: ""
+  qiniu_access_key: ""
+  qiniu_secret_key: ""
+  qiniu_bucket: ""
+  qiniu_bucket_domain: ""
